Fix overflowing option label in order by select

--- a/src/common/components/list/searchList.module.scss
+++ b/src/common/components/list/searchList.module.scss
@@ -78,6 +78,10 @@
   }
 }
 
+.orderbySelect {
+  min-width: 15rem;
+}
+
 .loadMore {
   width: 100%;
 
